--- a/estagio.html
+++ b/estagio.html
@@ -2,13 +2,50 @@
 <h1>
     Relatório de Estágio
 </h1>
-<h3>
-     Introdução   
-</h3>
-<h4>
+<h2>
+     1.Introdução   
+</h2>
+<p>
     Este relatório tem como objetivo descrever as atividades desenvolvidas durante 
     o estágio supervisionado realizado na empresa TechSoft Soluções em TI, localizada 
     em Belo Horizonte - MG. O estágio foi realizado no setor de Suporte Técnico e 
     Desenvolvimento de Sistemas, entre os dias 01 de março de 2025 e 30 de abril de 2025, 
     totalizando 160 horas.
+
+</p>
+
+<h3>
+    1.1. Objetivos
+</h3>
+<h4>
+    1.1.1. Objetivos Gerais
 </h4>
+<p>
+   Vivenciar a prática profissional na área de Informática, aplicando os conhecimentos 
+   adquiridos ao longo do curso técnico, especialmente nas áreas de suporte técnico e 
+   desenvolvimento de sistemas. 
+</p>
+<h4>
+    1.1.1. Objetivos Específicos
+</h4>
+<p>
+   <br>Prestar suporte técnico a usuários internos da empresa.
+   <br> Realizar manutenção preventiva e corretiva de computadores e redes.
+   <br>Auxiliar na programação de sistemas web utilizando linguagens como HTML, CSS, JavaScript e PHP.
+   <br> Aprender e aplicar boas práticas de segurança da informação.
+   <br> Desenvolver habilidades interpessoais e profissionais no ambiente corporativo.
+
+</p>
+<h3>
+    2. Atividades Realizadas
+</h3>
+<h4>
+    2.1. Atividade 01 – Suporte técnico e manutenção de equipamentos
+</h4>
+<p>
+    Nesta atividade, fui responsável pelo atendimento de chamados internos relacionados
+     a problemas em estações de trabalho, impressoras e conexão de rede. Realizei formatações,
+      instalações de sistemas operacionais (Windows e Linux), atualizações de software e 
+      limpeza física de componentes. Também participei da organização do inventário de hardware
+       da empresa, utilizando planilhas de controle.
+</p>
