--- a/estagio.html
+++ b/estagio.html
@@ -49,3 +49,24 @@
       limpeza física de componentes. Também participei da organização do inventário de hardware
        da empresa, utilizando planilhas de controle.
 </p>
+<h4>
+    2.2. Atividade 02 – Desenvolvimento e manutenção de sistema web interno
+</h4>
+<p>
+    Atuei como auxiliar no desenvolvimento e manutenção de um sistema interno de controle de chamados técnicos.
+     A aplicação foi desenvolvida em PHP com banco de dados MySQL. Participei da codificação de funcionalidades básicas,
+     como cadastro de chamados e geração de relatórios. Também colaborei com a criação de interfaces utilizando HTML, 
+     CSS e JavaScript, aplicando conceitos de responsividade.
+</p>
+
+<h3>
+    3. Conclusão
+</h3>
+<p>
+    O estágio realizado na empresa TechSoft Soluções em TI proporcionou uma excelente oportunidade de crescimento 
+    técnico e profissional. As atividades desenvolvidas contribuíram diretamente para o aprimoramento dos meus conhecimentos em
+     suporte técnico e programação, além de permitir o contato com ferramentas e práticas utilizadas no mercado de trabalho. 
+     A experiência reforçou minha decisão de seguir na área de Tecnologia da Informação e ampliou minha visão sobre os 
+     desafios e possibilidades da profissão.
+
+</p>
