--- a/estagio.html
+++ b/estagio.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<body>
+
 <h1>
     Relatório de Estágio
 </h1>
@@ -70,3 +72,4 @@
      desafios e possibilidades da profissão.
 
 </p>
+</body>
