--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<head>
+
+</head>
+<body>
+
+
 <h1>
     Kailene Rodrigues de Souza
 </h1>
@@ -9,3 +15,4 @@
   <li><a href="experiencias.html">Experiência</a></li>
   <li><a href="aspiracoes.html">Aspirações</a></li>
 </ul>
+</body>
